Inline CSS is not worth it, so changing back to Internal CSS
Also this time background color is just simple white.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 <head>
   <meta charset="utf-8">
   <title>Hari's Personal Site</title>
+  <style media="screen">
+    body{
+      background-color: #ffffff;
+
+    }
+  </style><!--Internal CSS-->
 
 </head>
 
-<body style="background-color: #00d1b2;"><!--Inline CSS-->
+<body>
+<!--<body style="background-color: #00d1b2;">--><!--Inline CSS-->
   <table cellspacing="20">
     <thead>
 
