--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Hari's Personal Site</title>
   <style media="screen">
     body{
-      background-color: #ffffff;
+      background-color: #00d1b2;;
 
     }
   </style><!--Internal CSS-->
