--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
   <meta charset="utf-8">
   <title>Hari's Personal Site</title>
   <style media="screen">
-    body{
-      background-color: #00d1b2;;
-
+      body{
+      background-color: #eaf6f6;
     }
+      hr{
+        border-style: none;
+        border-top-style: dotted;
+        height: 0px;
+        border-color: grey;
+        border-width: 5px;
+        width: 5%;
+      }
   </style><!--Internal CSS-->
 
 </head>
