Forgot to modify HTML element, my bad
Oops!

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   </table>
 
 
-  <hr size="3" color="cyan" noshade>
+  <hr><!--Browsers does apply some default CSS to elemnts--><!--CSS DEfault Browser values--><!---->
+  <!--<hr size="3" color="cyan" noshade>-->
   <h3>Education</h3>
 
   <ul>
