Linked to CSS file
Done by applying External CSS method

--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
 <head>
   <meta charset="utf-8">
   <title>Hari's Personal Site</title>
+  <!--
+
   <style media="screen">
-      body{
-      background-color: #eaf6f6;
-    }
-      hr{
-        border-style: none;
-        border-top-style: dotted;
-        height: 0px;
-        border-color: grey;
-        border-width: 5px;
-        width: 5%;
-      }
-  </style><!--Internal CSS-->
+
+  </style>
+
+  Internal CSS-->
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
