--- a/form.html
+++ b/form.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+ <title>Write to Us</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
