--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Projects</title>
+  <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>List of all Coding Projects</h1>
