fixed typos as well adding classes to anchor tags

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </td>
 
         <td>
-          <p><strong>Founder</strong> and <strong>CEO</strong> of <a href="https://www.fitbea.com">Fibea.com</a><br>&#10054;Passionate about tech,fitness &#38;
+          <p><strong>Founder</strong> and <strong>CEO</strong> of <a class="mysite" href="https://www.fitbea.com">Fibea.com</a><br>&#10054;Passionate about tech,fitness &#38;
             movies❆
             <!--made with https://unicode-table.com/en/2746/
       https://www.html.am/html-codes/character-codes/html-ampersand-code.cfm-->
@@ -55,9 +55,9 @@
   </ul>
   <h3>Hobbies</h3>
   <ol type="I" start="5">
-    <li><a href="https://google.com">Reading</a></li>
-    <li><a href="https://www.bodybuilding.com">Bodybuilding&nbsp;&amp;&nbsp;Finess</a></li>
-    <li><a href="projects.html">Coding</a></li>
+    <li><a class="hobbies" href="https://google.com">Reading</a></li>
+    <li><a class="hobbies" href="https://www.bodybuilding.com">Bodybuilding&nbsp;&amp;&nbsp;Fitness</a></li>
+    <li><a class="hobbies" href="projects.html">Coding</a></li>
     <li>Learning</li>
     <li>Gaming</li>
     <li>Movies</li>
