--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <td>
           <h1>Hari Krishnan</h1>
           <!--<img src="https://images.unsplash.com/photo-1586154083478-e128416f4131?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="me_LQ">-->
-          <img src="images\apj.jpg" alt="APJ Abdul Kalam">
+          <img class="circular" src="images\apj.jpg" alt="APJ Abdul Kalam">
         </td>
 
         <td>
