fixed another typo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </td>
 
         <td>
-          <p><strong>Founder</strong> and <strong>CEO</strong> of <a class="mysite" href="https://www.fitbea.com">Fibea.com</a><br>&#10054;Passionate about tech,fitness &#38;
+          <p><strong>Founder</strong> and <strong>CEO</strong> of <a class="mysite" href="https://www.fitbea.com">Fitbea.com</a><br>&#10054;Passionate about tech,fitness &#38;
             movies❆
             <!--made with https://unicode-table.com/en/2746/
       https://www.html.am/html-codes/character-codes/html-ampersand-code.cfm-->
